--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -132,7 +132,7 @@
   "mywallet.othercards.title": "Other Cards",
 
   "welcome.title": "Welcome",
-"welcome.subtitle": "You can return to Hopi's colorful and profitable world whenever you want",
+"welcome.subtitle": "You can return to Coix's colorful and profitable world whenever you want",
 "welcome.button": "LOG IN",
 
 "email.title": "Email Address",
