--- a/lang/locales/tr.json
+++ b/lang/locales/tr.json
@@ -137,7 +137,7 @@
     "mywallet.othercards.title": "Diğer Kartlarım",
 
     "welcome.title": "Hoşgeldin",
-    "welcome.subtitle": "Ne zaman istersen, Hopi'nin renkli ve kazançlı dünyasına dönebilirsin",
+    "welcome.subtitle": "Ne zaman istersen, Coix'in renkli ve kazançlı dünyasına dönebilirsin",
 "welcome.button": "GİRİŞ YAP",
 
 "email.title": "Eposta Adresi",
